force-app/main/default/objects/Hippo_Event__c/fields/Review_Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Review_Meeting_Date__c</fullName>
    <label>Review Meeting Date</label>
    <type>Date</type>
</CustomField>