force-app/main/default/objects/Hippo_Event__c/fields/Source_Sync__c.field-meta.xml
<CustomField>
    <fullName>Source_Sync__c</fullName>
    <label>Source Sync</label>
    <length>100</length>
    <type>Text</type>
</CustomField>