force-app/main/default/objects/Hippo_Event__c/fields/Spain_Province__c.field-meta.xml
<CustomField>
    <fullName>Spain_Province__c</fullName>
    <label>Spain Province</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corunna</fullName>
                <label>A Coruña</label>
            </value>
            <value>
                <fullName>Alava</fullName>
                <label>Álava</label>
            </value>
            <value>
                <fullName>Albacete</fullName>
            </value>
            <value>
                <fullName>Alicante</fullName>
            </value>
            <value>
                <fullName>Almeria</fullName>
                <label>Almería</label>
            </value>
            <value>
                <fullName>Asturias</fullName>
            </value>
            <value>
                <fullName>Avila</fullName>
                <label>Ávila</label>
            </value>
            <value>
                <fullName>Badajoz</fullName>
            </value>
            <value>
                <fullName>Baleares</fullName>
            </value>
            <value>
                <fullName>Barcelona</fullName>
            </value>
            <value>
                <fullName>Burgos</fullName>
            </value>
            <value>
                <fullName>Caceres</fullName>
                <label>Cáceres</label>
            </value>
            <value>
                <fullName>Cadiz</fullName>
                <label>Cádiz</label>
            </value>
            <value>
                <fullName>Cantabria</fullName>
            </value>
            <value>
                <fullName>Castellon</fullName>
                <label>Castellón</label>
            </value>
            <value>
                <fullName>Ceuta</fullName>
            </value>
            <value>
                <fullName>Ciudad Real</fullName>
            </value>
            <value>
                <fullName>Córdoba</fullName>
            </value>
            <value>
                <fullName>Cuenca</fullName>
            </value>
            <value>
                <fullName>Girona</fullName>
            </value>
            <value>
                <fullName>Granada</fullName>
            </value>
            <value>
                <fullName>Guadalajara</fullName>
            </value>
            <value>
                <fullName>Gipuzkoa</fullName>
            </value>
            <value>
                <fullName>Huelva</fullName>
            </value>
            <value>
                <fullName>Huesca</fullName>
            </value>
            <value>
                <fullName>Jaen</fullName>
                <label>Jaén</label>
            </value>
            <value>
                <fullName>La Rioja</fullName>
            </value>
            <value>
                <fullName>Las Palmas</fullName>
            </value>
            <value>
                <fullName>Lion</fullName>
                <label>León</label>
            </value>
            <value>
                <fullName>Lleida</fullName>
                <label>Lérida</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>