force-app/main/default/objects/Hippo_Event__c/fields/Sponsored_Event_last_12m__c.field-meta.xml
<CustomField>
    <fullName>Sponsored_Event_last_12m__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has Viatris sponsored this event in the past twelve (12) months? If yes, provide a description of Viatris&apos;s previous sponsorship.</description>
    <inlineHelpText>Has Viatris sponsored this event in the past twelve (12) months? If yes, provide a description of Viatris&apos;s previous sponsorship.</inlineHelpText>
    <label>Sponsored Event last 12m</label>
    <type>Checkbox</type>
</CustomField>