force-app/main/default/objects/Hippo_Event__c/fields/Start_Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Event_Date__c</fullName>
    <label>Start Event Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>