force-app/main/default/objects/Hippo_Event__c/fields/Status_Formula__c.field-meta.xml
<CustomField>
    <fullName>Status_Formula__c</fullName>
    <formula>IF(AND(
TEXT(Status__c) == &apos;Approved&apos;,  
TEXT(Organizer__c) == &apos;3rd Party Organized&apos;,
with_Symposium__c == false
), $Label.hippoRegistered, CASE(Status__c,&quot;Approved&quot;,$Label.hippoApproved,&quot;Draft&quot;,$Label.hippoDraft,&quot;Rejected&quot;,$Label.hippoRejected,&quot;Cancelled&quot;,$Label.hippoCancelled,&quot;Completed&quot;,$Label.hippoCompleted,&quot;Terminated&quot;,$Label.hippoTerminated,&quot;Sent to Approval&quot;,$Label.hippoSentToApproval,&quot;NA&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>