force-app/main/default/objects/Hippo_Event__c/fields/Step__c.field-meta.xml
<CustomField>
    <fullName>Step__c</fullName>
    <label>Step</label>
    <length>120</length>
    <type>Text</type>
</CustomField>