force-app/main/default/objects/Hippo_Event__c/fields/Submitted_To_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Submitted_To_Approval_Date__c</fullName>
    <description>Datetime when an event is sent for approval.</description>
    <label>Submitted To Approval Date</label>
    <type>DateTime</type>
</CustomField>