force-app/main/default/objects/Hippo_Event__c/fields/Sum_of_Financial_Amounts__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Financial_Amounts__c</fullName>
    <label>Sum of Financial Amounts</label>
    <summarizedField>Hippo_Event_Amount__c.Cost__c</summarizedField>
    <summaryForeignKey>Hippo_Event_Amount__c.Event__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>