force-app/main/default/objects/Hippo_Event__c/fields/Sum_of_Financial_Amounts_Currency__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Financial_Amounts_Currency__c</fullName>
    <formula>Sum_of_Financial_Amounts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sum of Financial Amounts Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>