force-app/main/default/objects/Hippo_Event__c/fields/Summary_Info__c.field-meta.xml
<CustomField>
    <fullName>Summary_Info__c</fullName>
    <description>Please Note: By submitting this Summary and related supporting information, the Requesting Party is deemed to confirm that the information provided in the Summary and the supporting information is true, accurate, and complete.</description>
    <formula>TEXT(null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Please Note: By submitting this Summary and related supporting information, the Requesting Party is deemed to confirm that the information provided in the Summary and the supporting information is true, accurate, and complete.</inlineHelpText>
    <label>Summary Info</label>
    <type>Text</type>
</CustomField>