force-app/main/default/objects/Hippo_Event__c/fields/Support_description__c.field-meta.xml
<CustomField>
    <fullName>Support_description__c</fullName>
    <label>Support description</label>
    <length>12000</length>
    <type>LongTextArea</type>
</CustomField>