force-app/main/default/objects/Hippo_Event__c/fields/Template_Version__c.field-meta.xml
<CustomField>
    <fullName>Template_Version__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Template Version</label>
    <referenceTo>Hippo_Template_Version__c</referenceTo>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>