force-app/main/default/objects/Hippo_Event__c/fields/Therapeutic_Area__c.field-meta.xml
<CustomField>
    <fullName>Therapeutic_Area__c</fullName>
    <label>Therapeutic Area</label>
    <length>200</length>
    <type>Text</type>
</CustomField>