force-app/main/default/objects/Hippo_Event__c/fields/Therapeutic_Area_PK__c.field-meta.xml
<CustomField>
    <fullName>Therapeutic_Area_PK__c</fullName>
    <label>Therapeutic Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allergy</fullName>
            </value>
            <value>
                <fullName>Anaesthesia &amp; Intensive Care</fullName>
            </value>
            <value>
                <fullName>Cardiology</fullName>
            </value>
            <value>
                <fullName>Cystic Fibrosis</fullName>
            </value>
            <value>
                <fullName>CNS</fullName>
            </value>
            <value>
                <fullName>Dermatology</fullName>
            </value>
            <value>
                <fullName>Diabetes</fullName>
            </value>
            <value>
                <fullName>Digital Therapeutics</fullName>
            </value>
            <value>
                <fullName>Gastroenterology</fullName>
            </value>
            <value>
                <fullName>Hematology</fullName>
            </value>
            <value>
                <fullName>HIV</fullName>
            </value>
            <value>
                <fullName>Immunology</fullName>
            </value>
            <value>
                <fullName>Infectious Disease</fullName>
            </value>
            <value>
                <fullName>Mens Health</fullName>
            </value>
            <value>
                <fullName>Multiple Sclerosis</fullName>
            </value>
            <value>
                <fullName>Oncology</fullName>
            </value>
            <value>
                <fullName>Ophthalmology</fullName>
            </value>
            <value>
                <fullName>Oral Care</fullName>
            </value>
            <value>
                <fullName>Osteoarthritis</fullName>
            </value>
            <value>
                <fullName>Pain</fullName>
            </value>
            <value>
                <fullName>Respiratory</fullName>
            </value>
            <value>
                <fullName>Thrombosis</fullName>
            </value>
            <value>
                <fullName>Urology</fullName>
            </value>
            <value>
                <fullName>Womens Health</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Respiratory and Allergy</fullName>
            </value>
            <value>
                <fullName>Cardiometabolic</fullName>
            </value>
            <value>
                <fullName>OA and Pain</fullName>
            </value>
            <value>
                <fullName>Endocrinology</fullName>
                <isActive>false</isActive>
                <label>Endocrinology</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>