force-app/main/default/objects/Hippo_Event__c/fields/Third_party_organization_involved__c.field-meta.xml
<CustomField>
    <fullName>Third_party_organization_involved__c</fullName>
    <description>Name of third party organization involved</description>
    <inlineHelpText>Name of third party organization involved</inlineHelpText>
    <label>Third party organization involved</label>
    <type>TextArea</type>
</CustomField>