force-app/main/default/objects/Hippo_Event__c/fields/Third_party_organizer_Organizer_Name__c.field-meta.xml
<CustomField>
    <fullName>Third_party_organizer_Organizer_Name__c</fullName>
    <label>Third-party organizer (“Organizer”) Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>