force-app/main/default/objects/Hippo_Event__c/fields/Total_Advisory_Board_Number__c.field-meta.xml
<CustomField>
    <fullName>Total_Advisory_Board_Number__c</fullName>
    <description>If the Company-organized Event is an advisory board, identify the total number of Company Personnel who will attend.</description>
    <inlineHelpText>If the Company-organized Event is an advisory board, identify the total number of Company Personnel who will attend.</inlineHelpText>
    <label>Total Advisory Board Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>