force-app/main/default/objects/Hippo_Event__c/fields/Total_Comments__c.field-meta.xml
<CustomField>
    <fullName>Total_Comments__c</fullName>
    <label>Total Comments</label>
    <summaryForeignKey>Hippo_Event_Comment__c.Hippo_Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>