force-app/main/default/objects/Hippo_Event__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <description>Total cost</description>
    <inlineHelpText>Total cost</inlineHelpText>
    <label>Total Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>