force-app/main/default/objects/Hippo_Event__c/fields/Total_cost_in_USD__c.field-meta.xml
<CustomField>
    <fullName>Total_cost_in_USD__c</fullName>
    <formula>IF(
    OR(ISBLANK(Currency_Rate__c), Currency_Rate__c = 0),
    0,
    Total_Cost__c / Currency_Rate__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total cost in USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>