force-app/main/default/objects/Hippo_Event__c/fields/Total_cost_in_USD_Formula__c.field-meta.xml
<CustomField>
    <fullName>Total_cost_in_USD_Formula__c</fullName>
    <formula>IF(OR(ISBLANK(Currency_Rate__c), Currency_Rate__c = 0 ),&apos;&apos;,TEXT( FLOOR(100* (Total_Cost__c / Currency_Rate__c) )/ 100) + &apos; USD&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total cost in USD formula</label>
    <type>Text</type>
</CustomField>