force-app/main/default/objects/Hippo_Event__c/fields/Total_HCP_Advisory_Board_Number__c.field-meta.xml
<CustomField>
    <fullName>Total_HCP_Advisory_Board_Number__c</fullName>
    <description>If the Company-organized Event is an advisory board, identify the total number ofHCPs to be engaged as advisory board members.</description>
    <inlineHelpText>If the Company-organized Event is an advisory board, identify the total number of HCPs to be engaged as advisory board members.</inlineHelpText>
    <label>Total HCP Advisory Board Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>