force-app/main/default/objects/Hippo_Event__c/fields/Total_HCP_Attending_Number__c.field-meta.xml
<CustomField>
    <fullName>Total_HCP_Attending_Number__c</fullName>
    <description>Anticipated number of HCPs attending the event overall.</description>
    <inlineHelpText>Anticipated number of HCPs attending the event overall.</inlineHelpText>
    <label>Total HCP Attending Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>