force-app/main/default/objects/Hippo_Event__c/fields/Total_HCP_with_Educational_Number__c.field-meta.xml
<CustomField>
    <fullName>Total_HCP_with_Educational_Number__c</fullName>
    <description>Total number of HCPs to be provided with Educational Support by Viatris (if a group of HCPs are to be provided with Educational Support for the same educational event).</description>
    <inlineHelpText>Total number of HCPs to be provided with Educational Support by Viatris (if a group of HCPs are to be provided with Educational Support for the same educational event).</inlineHelpText>
    <label>Total HCP with Educational Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>