force-app/main/default/objects/Hippo_Event__c/fields/Tracking_ID__c.field-meta.xml
<CustomField>
    <fullName>Tracking_ID__c</fullName>
    <formula>UPPER(Parent_User_Setting__r.Country__r.Country_Code__c)+ &apos;_&apos; + (&apos;E&apos; + IF(Unique_Index__c&lt;10000, &apos;0&apos;, &apos;&apos;) + IF(Unique_Index__c&lt;1000, &apos;0&apos;, &apos;&apos;) + IF(Unique_Index__c&lt;100, &apos;0&apos;, &apos;&apos;) + IF(Unique_Index__c&lt;10, &apos;0&apos;, &apos;&apos;) + TEXT(Unique_Index__c))+&apos;_&apos;+ 
Name+
&apos;_&apos;+(IF(DAY( Start_Event_Date__c )&lt;10, &apos;0&apos;, &apos;&apos;)) + TEXT(DAY(Start_Event_Date__c))+
&apos;_&apos;+ (IF(MONTH(Start_Event_Date__c)&lt;10, &apos;0&apos;, &apos;&apos;) + TEXT(MONTH(Start_Event_Date__c) )+
&apos;_&apos;+TEXT(YEAR(Start_Event_Date__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Name</label>
    <type>Text</type>
</CustomField>