force-app/main/default/objects/Hippo_Event__c/fields/Tracking_ID_Cus__c.field-meta.xml
<CustomField>
    <fullName>Tracking_ID_Cus__c</fullName>
    <externalId>true</externalId>
    <label>Tracking_ID_Cus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>