force-app/main/default/objects/Hippo_Event__c/fields/TrackingNumber__c.field-meta.xml
<CustomField>
    <fullName>TrackingNumber__c</fullName>
    <label>Tracking Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>