force-app/main/default/objects/Hippo_Event__c/fields/Travel_and_Hospitality_Description__c.field-meta.xml
<CustomField>
    <fullName>Travel_and_Hospitality_Description__c</fullName>
    <description>Description of any travel and hospitality (including expenses associated with accommodation, meals, and travel per HCP)</description>
    <inlineHelpText>Description of any travel and hospitality (including expenses associated with accommodation, meals, and travel per HCP)</inlineHelpText>
    <label>Travel and Hospitality Description</label>
    <length>12000</length>
    <type>LongTextArea</type>
</CustomField>