force-app/main/default/objects/Hippo_Event__c/fields/Tthird_party_organization_Name__c.field-meta.xml
<CustomField>
    <fullName>Tthird_party_organization_Name__c</fullName>
    <description>For a Company-organized Event, identify whether a Third Party Provider will be used or whether Viatris  will organize it directly.
For Event Sponsorship, identify the third party organization to receive Viatris&apos;s financial support for the event.</description>
    <inlineHelpText>For a Company-organized Event, identify whether a Third Party Provider will be used or whether Viatris  will organize it directly.
For Event Sponsorship, identify the third party organization to receive Viatris&apos;s financial support for the event.</inlineHelpText>
    <label>Tthird party organization Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>