force-app/main/default/objects/Hippo_Event__c/fields/Tthird_party_organization_Type__c.field-meta.xml
<CustomField>
    <fullName>Tthird_party_organization_Type__c</fullName>
    <description>Name and type of third party organization involved. For a Company-organized Event, identify whether a Third Party Provider will be used or whether Viatris  will organize it directly.</description>
    <inlineHelpText>Name and type of third party organization involved. For a Company-organized Event, identify whether a Third Party Provider will be used or whether Viatris  will organize it directly.</inlineHelpText>
    <label>Tthird party organization Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>