force-app/main/default/objects/Hippo_Event__c/fields/Unanswered_Comments__c.field-meta.xml
<CustomField>
    <fullName>Unanswered_Comments__c</fullName>
    <label>Unanswered Comments</label>
    <summaryFilterItems>
        <field>Hippo_Event_Comment__c.Status__c</field>
        <operation>equals</operation>
        <value>Sent</value>
    </summaryFilterItems>
    <summaryForeignKey>Hippo_Event_Comment__c.Hippo_Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>