force-app/main/default/objects/Hippo_Event__c/fields/Unique_Index__c.field-meta.xml
<CustomField>
    <fullName>Unique_Index__c</fullName>
    <label>Unique Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>