force-app/main/default/objects/Hippo_Event__c/fields/URL_To_Original_Sync__c.field-meta.xml
<CustomField>
    <fullName>URL_To_Original_Sync__c</fullName>
    <label>URL To Original Sync</label>
    <type>Url</type>
</CustomField>