force-app/main/default/objects/Hippo_Event__c/fields/VIA_HIP_Are_the_HCPs_engaged_CB__c.field-meta.xml
<CustomField>
    <fullName>VIA_HIP_Are_the_HCPs_engaged_CB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Are the HCPs engaged in the activity CB</label>
    <type>Checkbox</type>
</CustomField>