force-app/main/default/objects/Hippo_Event__c/fields/VIA_HIP_Are_the_HCPs_engaged_PK__c.field-meta.xml
<CustomField>
    <fullName>VIA_HIP_Are_the_HCPs_engaged_PK__c</fullName>
    <description>Are the HCPs engaged in the activity selected based on their expertise and without undue influence from commercial colleagues?</description>
    <inlineHelpText>Are the HCPs engaged in the activity selected based on their expertise and without undue influence from commercial colleagues?</inlineHelpText>
    <label>Are the HCPs engaged in the activity PK</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_NA</valueSetName>
    </valueSet>
</CustomField>