force-app/main/default/objects/Hippo_Event__c/fields/VIA_HIP_Are_the_HCPs_engaged_Rep__c.field-meta.xml
<CustomField>
    <fullName>VIA_HIP_Are_the_HCPs_engaged_Rep__c</fullName>
    <formula>IF( TEXT(VIA_HIP_Are_the_HCPs_engaged_PK__c) != null, TEXT(VIA_HIP_Are_the_HCPs_engaged_PK__c),
IF(VIA_HIP_Are_the_HCPs_engaged_CB__c = true, &quot;Yes&quot;,
IF(VIA_HIP_Are_the_HCPs_engaged_CB__c = false, &quot;No&quot;,&quot;&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Are the HCPs engaged in the activity</label>
    <type>Text</type>
</CustomField>