force-app/main/default/objects/Hippo_Event__c/fields/VIA_HIP_BackofficeParentUserSetting__c.field-meta.xml
<CustomField>
    <fullName>VIA_HIP_BackofficeParentUserSetting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Backoffice Parent User Setting</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Hippo_User_Settings__c.VIA_HIP_IsSyntheticUserSetting__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Hippo_User_Settings__c</referenceTo>
    <relationshipLabel>Interactions (Backoffice Parent User Setting)</relationshipLabel>
    <relationshipName>Backoffice_Parent_Of_Event</relationshipName>
    <type>Lookup</type>
</CustomField>