force-app/main/default/objects/Hippo_Event__c/fields/VIA_HIP_Comments_About_Venue__c.field-meta.xml
<CustomField>
    <fullName>VIA_HIP_Comments_About_Venue__c</fullName>
    <description>Comments about venue</description>
    <inlineHelpText>Comments about venue</inlineHelpText>
    <label>Comments about venue</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>