force-app/main/default/objects/Hippo_Event__c/fields/VIA_HIP_Compl_Approval_Rejection_Date__c.field-meta.xml
<CustomField>
    <fullName>VIA_HIP_Compl_Approval_Rejection_Date__c</fullName>
    <description>The field keeps information from the approver record and shows information in a report</description>
    <label>Compliance Approval/Rejection Date</label>
    <type>Date</type>
</CustomField>