force-app/main/default/objects/Hippo_Event__c/fields/VIA_HIP_Compliance_Approver_Name__c.field-meta.xml
<CustomField>
    <fullName>VIA_HIP_Compliance_Approver_Name__c</fullName>
    <description>The field keeps information from the approver record and shows information in a report</description>
    <label>Compliance Approver Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>