force-app/main/default/objects/Hippo_Event__c/fields/VIA_HIP_Currency_Rate_Sync__c.field-meta.xml
<CustomField>
    <fullName>VIA_HIP_Currency_Rate_Sync__c</fullName>
    <label>Currency Rate Sync</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>