force-app/main/default/objects/Hippo_Event__c/fields/VIA_HIP_Currency_Sync__c.field-meta.xml
<CustomField>
    <fullName>VIA_HIP_Currency_Sync__c</fullName>
    <label>Currency Sync</label>
    <length>255</length>
    <type>Text</type>
</CustomField>