force-app/main/default/objects/Hippo_Event__c/fields/VIA_HIP_Cvent_Event_ID__c.field-meta.xml
<CustomField>
    <fullName>VIA_HIP_Cvent_Event_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Event External Id received from Cvent.</description>
    <label>Cvent Event ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>