force-app/main/default/objects/Hippo_Event__c/fields/VIA_HIP_Cvent_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>VIA_HIP_Cvent_Event_Type__c</fullName>
    <description>Defines the value for the Event Type field that has to be sent to Cvent</description>
    <formula>IF(
    ISPICKVAL(Type__c, &quot;Site Visit&quot;), 
    &quot;Site Visit&quot;,
    IF(
        ISPICKVAL(Organizer__c, &quot;Company Organized&quot;), 
        &quot;Company Organised&quot;,
        IF(
            ISPICKVAL(Organizer__c, &quot;3rd Party Organized&quot;), 
            &quot;Third Party Organised&quot;, 
            &quot;&quot;
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cvent Event Type</label>
    <type>Text</type>
</CustomField>