force-app/main/default/objects/Hippo_Event__c/fields/VIA_HIP_Cvent_EventDeliveryAttempts__c.field-meta.xml
<CustomField>
    <fullName>VIA_HIP_Cvent_EventDeliveryAttempts__c</fullName>
    <description>Amount of delivery attemps</description>
    <label>Amount of delivery attemps</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>