force-app/main/default/objects/Hippo_Event__c/fields/VIA_HIP_Cvent_Meeting_Organizer_Email__c.field-meta.xml
<CustomField>
    <fullName>VIA_HIP_Cvent_Meeting_Organizer_Email__c</fullName>
    <description>Stores the email address of the meeting organizer of event in Cvent. This field is transferred to Cvent.</description>
    <label>Email of meeting organizer in Cvent</label>
    <type>Email</type>
</CustomField>