force-app/main/default/objects/Hippo_Event__c/fields/VIA_HIP_Cvent_Post_Factum_Event__c.field-meta.xml
<CustomField>
    <fullName>VIA_HIP_Cvent_Post_Factum_Event__c</fullName>
    <description>Defines the value for the Post Factum Event field that has to be sent to Cvent</description>
    <formula>IF(
    AND(Is_Post_Factum_Request__c, NOT(VIA_HIP_Is_Postfactum_Set_by_Batch__c)), 
    &quot;Yes&quot;, 
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cvent Post Factum Event</label>
    <type>Text</type>
</CustomField>