force-app/main/default/objects/Hippo_Event__c/fields/VIA_HIP_Cvent_Status__c.field-meta.xml
<CustomField>
    <fullName>VIA_HIP_Cvent_Status__c</fullName>
    <description>The status of Cvent integration for current record. Empty value means that no integration requests were initiated.</description>
    <label>Cvent Status Internal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Waiting for MR Status Update</fullName>
            </value>
            <value>
                <fullName>Failed with MR Created</fullName>
            </value>
            <value>
                <fullName>Failed to Copy Event</fullName>
            </value>
            <value>
                <fullName>Copy Event Success</fullName>
            </value>
            <value>
                <fullName>Finished Successfully</fullName>
            </value>
            <value>
                <fullName>Failed VenueSourcingRequest</fullName>
            </value>
            <value>
                <fullName>Failed with MR Created VenueSourcingRequest</fullName>
            </value>
            <value>
                <fullName>Failed to Copy Event VenueSourcingRequest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>