force-app/main/default/objects/Hippo_Event__c/fields/VIA_HIP_Cvent_Status_for_User__c.field-meta.xml
<CustomField>
    <fullName>VIA_HIP_Cvent_Status_for_User__c</fullName>
    <description>The status of Cvent integration for current record displayed to User. Empty value means that no integration requests were initiated.</description>
    <label>Cvent Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Succeeded</fullName>
            </value>
            <value>
                <fullName>Succeeded (Venue Sourcing)</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Pending CVENT submission</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>